@@ -1,6 +1,7 @@
 package org.mpack;
 
 import org.bson.Document;
+import org.jsoup.Jsoup;
 import org.springframework.data.util.Pair;
 
 
@@ -22,43 +23,46 @@ import java.util.function.Consumer;
 
 public class Ranker {
     static final MongodbIndexer mongoDB = new MongodbIndexer();
-    Comparator<Pair<String, Pair<List<Integer>, Pair<Double,Double>>>> urlPriority = new Comparator<Pair<String,Pair<List<Integer>, Pair<Double,Double>>>>() {
-        public int compare(Pair<String, Pair<List<Integer>, Pair<Double,Double>>> url1, Pair<String, Pair<List<Integer>, Pair<Double,Double>>> url2) {
-            //title
-            if(url1.getSecond().getFirst().get(0) > url2.getSecond().getFirst().get(0))
-                return 1;
-            //header
-            else if(url1.getSecond().getFirst().get(1) > url2.getSecond().getFirst().get(1))
-                return 1;
-            //priority  IDF-TF
-            else if (url1.getSecond().getSecond().getSecond() > url2.getSecond().getSecond().getSecond())
-                return 1;
+    Comparator<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double,Double>>>> urlPriority = (url1, url2) -> {
+        //title
+        if(url1.getSecond().getFirst().get(0) > url2.getSecond().getFirst().get(0))
+            return 1;
+        //header
+        else if(url1.getSecond().getFirst().get(1) > url2.getSecond().getFirst().get(1))
+            return 1;
+        //priority  IDF-TF
+        else if (url1.getSecond().getSecond().getSecond() > url2.getSecond().getSecond().getSecond())
+            return 1;
 
-            else if (url1.getSecond().getSecond().getSecond() < url2.getSecond().getSecond().getSecond())
-                return -1;
+        else if (url1.getSecond().getSecond().getSecond() < url2.getSecond().getSecond().getSecond())
+            return -1;
 
-            //pageRank
-            else if (url1.getSecond().getSecond().getFirst() > url2.getSecond().getSecond().getFirst())
-                return 1;
+        //pageRank
+        else if (url1.getSecond().getSecond().getFirst() > url2.getSecond().getSecond().getFirst())
+            return 1;
 
-            else if (url1.getSecond().getSecond().getFirst() < url2.getSecond().getSecond().getFirst())
-                return -1;
+        else if (url1.getSecond().getSecond().getFirst() < url2.getSecond().getSecond().getFirst())
+            return -1;
 
-            else
-                return 0;
-        }
+        else
+            return 0;
     };
 
 
-    PriorityQueue<Pair<String, Pair<List<Integer>,Pair<Double,Double>>>> ranker(HashMap<Integer, ArrayList<Document>> retDoc,
-                                                  PriorityQueue<Pair<String, Pair<List<Integer>,Pair<Double,Double>>>> stemmedPages)
+    PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>,Pair<Double,Double>>>> ranker(String phrase, HashMap<Integer, ArrayList<Document>> retDoc,
+                                                  PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>,Pair<Double,Double>>>> stemmedPages)
     {
-        PriorityQueue<Pair<String, Pair<List<Integer>,Pair<Double,Double>>>> rankedPages = new PriorityQueue<Pair<String, Pair<List<Integer>, Pair<Double,Double>>>>(urlPriority);
+        PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>,Pair<Double,Double>>>> rankedPages = new PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double, Double>>>>(urlPriority);
         //                  url           flags           pagerank  priority
-        stemmedPages = new PriorityQueue<Pair<String, Pair<List<Integer>, Pair<Double,Double>>>>(urlPriority);
+        stemmedPages = new PriorityQueue<Pair<Pair<String, Pair<String, String>>, Pair<List<Integer>, Pair<Double,Double>>>>(urlPriority);
 
         HashMap<String, Pair<List<Integer>, Pair<Double,Double>>> url_priority = new HashMap<>();
         HashMap<String, Pair<List<Integer>, Pair<Double,Double>>> url_priority_stem = new HashMap<>();
+
+        ArrayList<String> query = new ArrayList<>();
+        ArrayList<String> stemmed = new ArrayList<>();
+
+        query.add(phrase);
 
 
         double IDF = Double.valueOf(0);
@@ -72,23 +76,25 @@ public class Ranker {
             {
                 for(int j = 0; j < retDoc.get(i).size(); j++)
                 {
-
+                    query.add(retDoc.get(i).get(j).get("token_name").toString());
                     //mongoDB.CalcTF_IDF(retDoc.get(i).get(j), url_priority);
                     IDF = Double.parseDouble(retDoc.get(i).get(j).get("IDF").toString());
                     List<Document> webPages = (List<Document>) retDoc.get(i).get(j).get("documents");
                     //I think there is a more efficient way to get the url of the word rather than this
                     for (Document d: webPages){
-                        List<Integer> _flags = new ArrayList<>(2);
-                        _flags.set(0, 0);
-                        _flags.set(1, 0);
-                        TF = Double.parseDouble(d.get("normalized_TF").toString());  // to make sure -48 ?
-                        char[] flags  = d.get("Flags").toString().toCharArray();
-                        if(flags[0] - 48 > 0) // to convert from char to int --> to make sure ??????
+                        List<Integer> _flags = new ArrayList<>();
+                        /*_flags.set(0, 0);
+                        _flags.set(1, 0);*/
+                        TF = Double.parseDouble(d.get("normalizedTF").toString());  // to make sure -48 ?
+                        ArrayList<String> flags  = (ArrayList<String>) (d.get("Flags"));
+                        for(String s : flags)
+                            _flags.add(Integer.parseInt(s));
+                        /*if(flags[0] - 48 > 0) // to convert from char to int --> to make sure ??????
                             _flags.set(0, flags[0] - 48);
 
                         if(flags[1] - 48 > 0)
                             _flags.set(1, flags[1] - 48);
-
+*/
                         pagRank = Double.parseDouble(d.get("pageRank").toString());
                         priority = TF * IDF;
                         //search in the hashmap for this url or insert it if not found
@@ -106,21 +112,25 @@ public class Ranker {
             {
                 for(int j = 0; j < retDoc.get(i).size(); j++)
                 {
+                    stemmed.add(retDoc.get(i).get(j).get("token_name").toString());
                     //mongoDB.CalcTF_IDF(retDoc.get(i).get(j), url_priority);
                     IDF = Double.parseDouble(retDoc.get(i).get(j).get("IDF").toString());
                     List<Document> webPages = (List<Document>) retDoc.get(i).get(j).get("documents");
                     //I think there is a more efficient way to get the url of the word rather than this
                     for (Document d: webPages){
-                        List<Integer> _flags = new ArrayList<>(2);
-                        _flags.set(0, 0);
-                        _flags.set(1, 0);
-                        TF = Double.parseDouble(d.get("normalized_TF").toString());  // to make sure -48 ?
-                        char[] flags  = d.get("Flags").toString().toCharArray();
-                        if(flags[0] - 48 > 0) // to convert from char to int --> to make sure ??????
+                        List<Integer> _flags = new ArrayList<>();
+                        /*_flags.set(0, 0);
+                        _flags.set(1, 0);*/
+                        TF = Double.parseDouble(d.get("normalizedTF").toString());  // to make sure -48 ?
+                        ArrayList<String> flags  = (ArrayList<String>) (d.get("Flags"));
+                        for(String s : flags)
+                            _flags.add(Integer.parseInt(s));
+                        /*if(flags[0] - 48 > 0) // to convert from char to int --> to make sure ??????
                             _flags.set(0, flags[0] - 48);
 
                         if(flags[1] - 48 > 0)
                             _flags.set(1, flags[1] - 48);
+*/
 
                         pagRank = Double.parseDouble(d.get("pageRank").toString());
                         priority = TF * IDF;
@@ -139,18 +149,67 @@ public class Ranker {
             }
         }
         for(Map.Entry<String, Pair<List<Integer>,Pair<Double,Double>>> entry : url_priority.entrySet()) {
-            rankedPages.add(Pair.of(entry.getKey(), Pair.of(entry.getValue().getFirst(), entry.getValue().getSecond())));
+            Pair<String, String> paragraphTitle = getParagraph(entry.getKey(), query, phrase.isEmpty()).getSecond();
+            rankedPages.add(Pair.of(Pair.of(entry.getKey(), paragraphTitle), Pair.of(entry.getValue().getFirst(), entry.getValue().getSecond())));
         }
 
         for(Map.Entry<String, Pair<List<Integer>,Pair<Double,Double>>> entry : url_priority_stem.entrySet()) {
-            stemmedPages.add(Pair.of(entry.getKey(), Pair.of(entry.getValue().getFirst(), entry.getValue().getSecond())));
+            Pair<String, String> paragraphTitle = getParagraph(entry.getKey(), stemmed, false).getSecond();
+            stemmedPages.add(Pair.of(Pair.of(entry.getKey(), paragraphTitle), Pair.of(entry.getValue().getFirst(), entry.getValue().getSecond())));
         }
         return rankedPages;
     }
 
 
+    //phrase is array of query words without stop words, the whole phrase is at index 0.
+    Pair<Integer, Pair<String, String>> getParagraph(String url, ArrayList<String> phrase, boolean ps)
+    {
+        ArrayList<String> text = mongoDB.getTextUrl(url);
+        boolean found = false;
+        int i = -1, j;
+        for(j = 2; j < text.size(); j++) {
+            for (i = 0; i < phrase.size(); i++) {
+                found = text.contains(phrase.get(i));
+                if (found)
+                    return Pair.of(i, Pair.of(text.get(0), text.get(j)));
+            }
+        }
+        //not found --> return description
+            return Pair.of(-1, Pair.of(text.get(0), text.get(1)));
+    }
 
+    // --> the whole phrase is at index 0.
+    //phrase array is sorted according to importance of the word.
+/*    Pair<ArrayList<String>, String> getParagraph(String url, ArrayList<String> phrase, boolean ps)
+    {
+       String text = mongoDB.getTextUrl(url);
+       ArrayList<ArrayList<Integer>> indecies = new ArrayList<ArrayList<Integer>>();
+       int index;
+    *//*   if(ps) {
+           ArrayList<Integer> list = new ArrayList<>();
+           list.add(0, text.indexOf(phrase.get(0)));
+           indecies.add(0, list);
+           return new String(text.substring(indecies.get(0).get(0) - 50, indecies.get(0).get(0) + 50)); //TODO: change limits
+       }
+       else
+       {*//*
+        for (String s : phrase) {
+            index = 0;
+            ArrayList<Integer> list = new ArrayList<>();
+            do {
+                index = text.indexOf(s, index);
+                list.add(index);
+            } while (index != -1);
+            indecies.add(list);
+        }
+       *//*}*//*
 
+        for(int i = 0; i < indecies.size(); i++)
+        {
+
+        }
+       return text;
+    }*/
 
 
 
